@@ -1,4 +1,5 @@
 0.1-76
+- make read.ctd() understand another SBE format
 - add argument 'action' to oce.edit()
 - add oce.write.table()
 - add fill.gap()
